improvements, remove data files
Tables sizes exceeded those allowed by GitHub.

Instead, to keep things simpler than git-lfs, put those files into a repo
release.

--- a/notebooks/hello.ipynb
+++ b/notebooks/hello.ipynb
@@ -1,8 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is this?\n",
+    "\n",
+    "This is a Jupyter Notebook that demonstrates how Python can be used to explore the content of a DICOM dataset, which was converted into a collection of tables using this converter script: https://github.com/QIICR/dcm2tables\n",
+    "\n",
+    "The DICOM dataset used in this demonstration is available publicly from The Cancer Imaging Archive (TCIA), and can be downloaded following the instructions here: https://wiki.cancerimagingarchive.net/display/Public/QIN-HEADNECK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data\n",
+    "\n",
+    "The _QIN-HEADNECK_ collection is very large. For convenience, we ran the script mentioned above to create the tabular v view of the dataset. These tables can be downloaded here: **TODO** (make sure to unzip the file!). The schema of the tables is provided [here](https://app.quickdatabasediagrams.com/#/schema/_71V1H1AXEqqKWDnvx4VXw).\n",
+    "\n",
+    "In a nutshell, here is a bird's eye view of the QIN-HEADNECK dataset (the details are available in [this publicly available manuscript](https://doi.org/10.7717/peerj.2057)): \n",
+    "* 156 subjects with head and neck cancer\n",
+    "* each subject had one or more PET/CT study (each study is expected to include a CT and a PET imaging series) for disease staging and treatment response assessment\n",
+    "* images for a subset of subjects were analyzed to do the following:\n",
+    " * segment the primary tumor and the involved lymph nodes: each of these areas was segmented by each of the two readers, on two occasions, using [3D Slicer](http://slicer.org) both manually and using an interactive automated segmentation tool described in [this publicly available paper](http://onlinelibrary.wiley.com/doi/10.1118/1.4948679/full)\n",
+    " * segment reference regions for PET normalization: cerebellum, liver and aortic arch\n",
+    " * extract quantitative measurements from the segmented regions\n",
+    "\n",
+    "\n",
+    "## Tools\n",
+    "\n",
+    "In this demonstration we will use the following Python packages:\n",
+    "* Pandas for working with the tabular data\n",
+    "* numpy for numerical operations\n",
+    "* [matplotlib](https://matplotlib.org/index.html), [seaborn](https://seaborn.pydata.org/) and [bokeh](http://bokeh.pydata.org/en/latest/) for generating plots\n",
+    "\n",
+    "If you are working with this notebook on your own system, you will need to install those packages as a prerequisite to import the packages!\n",
+    "\n",
+    "## Let's go!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -10,53 +50,108 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def checkDFValidity(df):\n",
-    "  d1 = df.shape[0]\n",
-    "  d2 = df['SOPInstanceUID'].unique().shape[0]\n",
-    "  assert(d1 == d2)\n",
-    "\n",
-    "clinical_df = pd.read_csv('CD9.tsv', sep='\\t')\n",
-    "ct_df = pd.read_csv('CT.csv', sep='\\t', low_memory=False)\n",
-    "pt_df = pd.read_csv('PT.csv', sep='\\t', low_memory=False)\n",
-    "compositeContext_df=pd.read_csv('CompositeContext.csv', sep='\\t')\n",
-    "#df[\"Biopsy_DateOfProcedure\"] = pd.datetime(df[\"Biopsy_DateOfProcedure\"])\n",
-    "#pd.to_datetime(df.Biopsy_DateOfProcedure)"
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let's load three of the tables provided in the dataset. Note that all of the tables are linked by the _SOPInstanceUID_ that uniquely identifies every single DICOM dataset:\n",
+    "* **CompositeContext.csv** contains the common attributes related to the patient and study (e.g., dates, patient information) \n",
+    "* **CT.csv** contains attributes specific to the DICOM CT modality objects (Computed Tomography)\n",
+    "* **PT.csv** contains attributes for the DICOM PT modality (Positron Emitted Tomography, or PET)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "checkDFValidity(ct_df)\n",
-    "checkDFValidity(pt_df)\n",
-    "#checkDFValidity(clinical_df)\n",
-    "checkDFValidity(compositeContext_df)"
+    "#clinical_df = pd.read_csv('CD9.tsv', sep='\\t')\n",
+    "CT_df = pd.read_csv('../data/CT.csv', sep='\\t', low_memory=False)\n",
+    "PT_df = pd.read_csv('../data/PT.csv', sep='\\t', low_memory=False)\n",
+    "CompositeContext_df=pd.read_csv('../data/CompositeContext.csv', sep='\\t')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#clinical_df.set_index('SOPInstanceUID',inplace=True)\n",
-    "#ct_df.set_index('SOPInstanceUID',inplace=True)\n",
-    "#pt_df.set_index('SOPInstanceUID',inplace=True)\n",
-    "#compositeContext_df.set_index('SOPInstanceUID',inplace=True)\n"
+    "Let's see what attributes are stored in each of the tables we just loaded.\n",
+    "\n",
+    "**CompositeContext** table:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BodyPartExamined', 'ManufacturerModelName', 'Modality', 'PatientAge',\n",
+       "       'PatientID', 'PatientName', 'PatientSex', 'PatientWeight',\n",
+       "       'SOPClassUID', 'SOPInstanceUID', 'SeriesDate', 'SeriesDescription',\n",
+       "       'SeriesInstanceUID', 'SeriesTime', 'SoftwareVersions', 'StudyDate',\n",
+       "       'StudyDescription', 'StudyTime'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CompositeContext_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**CT** table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Columns', 'ConvolutionKernel', 'DistanceSourceToDetector',\n",
+       "       'DistanceSourceToPatient', 'Exposure', 'ExposureTime', 'FilterType',\n",
+       "       'FocalSpots', 'FrameOfReferenceUID', 'GeneratorPower',\n",
+       "       'ImageOrientationPatient', 'ImagePositionPatient', 'PixelSpacing',\n",
+       "       'ReconstructionDiameter', 'RotationDirection', 'Rows', 'SOPInstanceUID',\n",
+       "       'SliceThickness', 'XRayTubeCurrent'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CT_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PT** table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +163,53 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pt_df.columns"
+    "PT_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic validation of data consistency\n",
+    "\n",
+    "Let's do a quick sanity check - let's confirm that the values of _SOPInstanceUID_ column are unique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CT table valid: True\n",
+      "PT table valid: True\n",
+      "CompositeContext table valid: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def checkDFValidity(df):\n",
+    "  return df.shape[0] == df['SOPInstanceUID'].unique().shape[0]\n",
+    "\n",
+    "print(\"CT table valid: \"+str(checkDFValidity(CT_df)))\n",
+    "print(\"PT table valid: \"+str(checkDFValidity(PT_df)))\n",
+    "print(\"CompositeContext table valid: \"+str(checkDFValidity(CompositeContext_df)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each imaging exam of the patient (DICOM study) is uniquely identified by a _SOP"
    ]
   },
   {
