--- a/notebooks/headneck.ipynb
+++ b/notebooks/headneck.ipynb
@@ -119,6 +119,7 @@
    "outputs": [],
    "source": [
     "tablesPath = '/home/jovyan/data/QIN-HEADNECK-tables'\n",
+    "# set this to your location of the tables if running locally\n",
     "#tablesPath = '/Users/fedorov/Dropbox (Partners HealthCare)/ImageData/QIICR/QIN-HEADNECK/QIN-HEADNECK-tables-no_clinical/'"
    ]
   },
@@ -151,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SR_df = pd.read_csv(tablesPath+'/SR.tsv', sep='\\t', low_memory=False)\n",
